shift images to 50px wide when navbar stops shrinking

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -94,10 +94,10 @@ textarea{
         grid-template-rows: [top] 40px [content] 400px [bottom];
     }
     .logo {
-        max-width: 30px;
+        max-width: 50px;
     }
     .user_image{
-        max-width: 30px;
+        max-width: 50px;
     }
 }
 
